--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "multichannelplayer",
   "version": "0.0.1",
   "description": "multi channel player for BS",
-  "productName": "MultiCH Player",
+  "productName": "Multi Channel Audio Player",
   "author": "jkjh8 <jkjh82@naver.com>",
   "private": true,
   "scripts": {
@@ -15,6 +15,8 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "express": "^4.18.1",
+    "nedb-promises": "^6.0.3",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
